# centroids

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  api.html  azure-pipelines.yml  first_pass.html  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  second_pass.html  setup.cfg  setup.py  test.sh  theory.html  version.cmake
.doctrees/: api.doctree  environment.pickle  first_pass.doctree  index.doctree  second_pass.doctree  theory.doctree
LICENSE/: LICENSE
_images/: graphviz-036db7a0dfc39d1f86f20e8e493264593b7b8c29.png.map  graphviz-33efaa4199e61a77b6cdf9f596239e069a21a4b4.png.map
_sources/: index.rst.txt  second_pass.rst.txt  theory.rst.txt
_static/: documentation_options.js
bindings/: binding.cpp
centroids/: photons.h
cmake/: cpplint.cmake  version.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile
docs/source/: api.rst  conf.py  index.rst
docs/sphinx/: api.rst  conf.py.in  first_pass.rst  index.rst  second_pass.rst  theory.rst
examples/: Single_Photon_Test.ipynb
lib/: CMakeLists.txt  centroids.h  photons.cpp  photons.h
lmfit/: CMakeLists.txt
pycentroids/: __init__.py  _version.py  pycentroids.py
pycentroids/tests/: test_install.py  test_photons.py
python/: CMakeLists.txt  binding.cpp
src/: binding.cpp  photons.cpp  photons.h  version.h
tests/: test_install.py  test_photons.py
